# palworld-companion

./: .gitignore  README.md  RELEASE_NOTES.md  SOURCE_AUDIT.md  THIRD_PARTY_NOTICES.md  palplus-helper.cmd  pyproject.toml  requirements.txt
.github/workflows/: windows-package.yml
docs/: RAILWAY_REPORTING.md
packaging/: PalPlus.iss  PalPlus.spec  palplus_entry.py
src/palworld_companion/: __init__.py  __main__.py  app.py  bundle.py  diagnostics.py  first_launch_check.py  map_asset.py  models.py  pak_reader.py  planner.py  runtime_audit.py  store.py  telemetry.py  window_bind.py
src/palworld_companion/assets/: reporting.json
src/palworld_companion/data/: alpha_first_clear.json  alpha_pals.json  fast_travel.json  game_data.json
support_server/: Dockerfile  __init__.py  main.py  railway.json  report_server.py
tests/: test_app.py  test_bundle.py  test_diagnostics.py  test_entrypoint.py  test_map_asset.py  test_packaging.py  test_pak_reader.py  test_planner.py  test_real_bundle.py  test_store.py  test_telemetry.py  test_window_bind.py
tools/: import_alpha_pals.py  import_fast_travel.py  render_minimap_snapshot.py  render_release_assets.py
